fix: minor issues navigating docs

--- a/app/docs/index.mdx
+++ b/app/docs/index.mdx
@@ -1,1 +1,2 @@
-This is the welcome docs page.
+Welcome to the documentation for Mochi - an all-in-one media viewer. This documentation will discuss about 
+the uses of Mochi and how one creates and install custom modules.
