--- a/app/docs/index.mdx
+++ b/app/docs/index.mdx
@@ -1,2 +1,2 @@
-Welcome to the documentation for Mochi - an all-in-one media viewer. This documentation will discuss about
-the uses of Mochi and how one creates and install custom modules.
+Welcome to the documentation for Mochi — an all-in-one media viewer. This documentation will discuss about
+the uses of Mochi and how one can build and install their own modules.
