docs: add info on how to build modules

--- a/app/docs/faq/module.mdx
+++ b/app/docs/faq/module.mdx
@@ -1,3 +1,7 @@
 Frequently asked questions that are module specific.
 
+#### _What is a module?_
+
+A module allows retrieving content from an external source. This may be a Jellyfin instance, your own server, whichever!
+
 ### TBA
