--- a/app/docs/guides/getting-started.mdx
+++ b/app/docs/guides/getting-started.mdx
@@ -1,14 +1,19 @@
+import { TESTFLIGHT_LINK, DISCORD_LINK } from '@/utils/constants';
+
 ## Installation
 
-Mochi can be installed using TestFlight or manual installation.
+Mochi can be installed via TestFlight or manual installation.
 
 ### TestFlight Installation
-1. Download and join [TestFlight](https://testflight.apple.com/join/d960sZAm)
-2. Install Mochi 
+
+1. Download and join {<a target='_blank' href={TESTFLIGHT_LINK}>TestFlight</a>}
+2. Install Mochi
 
 ### Manual Installation
+
 As of now you will need to clone the [GitHub](https://github.com/Mochi-Team/mochi) repo and use Xcode to install
 the app on your device. Soon I will release compiled IPAs once TestFlight is close to being full.
 
 ### Troubleshooting
-Issues installing Mochi? Join the [Discord](https://discord.gg/pB8q49UsZp) and ask for assistance in the `#app-support` channel.
+
+Issues installing Mochi? Join the Discord {<a target='_blank' href={DISCORD_LINK}>server</a>} and ask for assistance in the `#app-support` channel.
