docs: update contribution docs

--- a/app/docs/contribution.mdx
+++ b/app/docs/contribution.mdx
@@ -1,1 +1,24 @@
-Any contribution is highly appreciated!
+Do you want to help out with the development of Mochi and friends? Here are a few ways you can contribute:
+
+## Application
+
+The main application
+
+- [@Mochi-Team/Mochi](https://github.com/Mochi-Team/mochi)
+
+## Module Development
+
+The tools used for building/debugging modules
+
+- [@mochiapp/js](https://github.com/Mochi-Team/js)
+- [@mochiapp/cli](https://github.com/Mochi-Team/cli)
+
+## Website
+
+The source code of this website
+
+- [@mochiapp/website](https://github.com/Mochi-Team/website)
+
+## Ko-Fi
+
+If you'd like, you can support [errorerrorerror](https://github.com/errorerrorerror), the main developer of Mochi, on [Ko-Fi](https://ko-fi.com/errorerrorerror).
