--- a/app/docs/guides/installing-a-module.mdx
+++ b/app/docs/guides/installing-a-module.mdx
@@ -1,4 +1,4 @@
-import { DISCORD_LINK } from '@/utils/constants'
+import { DISCORD_LINK } from '@/utils/constants';
 
 Once Mochi has been installed, you will need to add a module to view your external content.[^1]
 
