feat: add app screenshots

--- a/app/docs/contribution.mdx
+++ b/app/docs/contribution.mdx
@@ -21,4 +21,4 @@ The source code of this website
 
 ## Ko-Fi
 
-If you'd like, you can support [errorerrorerror](https://github.com/errorerrorerror), the main developer of Mochi, on [Ko-Fi](https://ko-fi.com/errorerrorerror).
+If you'd like, you can support [erikbdev](https://github.com/erikbdev), the main developer of Mochi, on [Ko-Fi](https://ko-fi.com/erikbdev).
